# Hermione

./: .gitignore  LICENSE  profile_timing.py  pyproject.toml  test_deps.py
electron-app/: .gitignore  README.md  check-prerequisites.js  install-mac.sh  package-lock.json  package.json  setup.sh
electron-app/src/: constants.js  get_selected_text.sh  index.html  main.js  popup-template.js  renderer.js
src/: README.md  agent.ipynb  agent.py  agent_config.py  api.py  langgraph.json  llm_providers.py  requirements.txt
src/tools/: currency_converter.py  function_calculator.py  llm_tools.py  tz_convertor.py
tests/: conftest.py  test_agent.py  test_tz_agent.py  test_tz_convertor.py
